force-app/main/default/objects/CWS_Contract__c/fields/Estimated_Rate_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Rate_Value__c</fullName>
    <label>Estimated Rate Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>