force-app/main/default/objects/CWS_Contract__c/fields/Per_Diem_Rate__c.field-meta.xml
<CustomField>
    <fullName>Per_Diem_Rate__c</fullName>
    <formula>(Estimated_Rate_Value__c * 12) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Per Diem Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>