force-app/main/default/objects/CWS_Contract__c/fields/Rate_Id__c.field-meta.xml
<CustomField>
    <fullName>Rate_Id__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Rate Id</label>
    <type>AutoNumber</type>
</CustomField>